<resources>
    <string name="app_name">AA Lift</string>
    <string name="facebook_app_id" translatable="false">293247671385628</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb293247671385628</string>
    <string name="textview">TextView</string>
    <string name="logoutbtn">LOGOUT</string>
    <string name="name">Name</string>
    <string name="continue_with_facebook">CONTINUE WITH FACEBOOK</string>
    <string name="SIGN_UP">SIGN UP</string>
    <string name="ALREADY_HAVE_AN_ACCOUNT">Already have an account?Sign In</string>
    <string name="SIGN_IN">Sign In</string>
    <string name="by_clicking_on_login_you_are_accepting_our_terms_and_conditions">By Clicking on login, you are accepting our terms and conditions</string>
    <string name="title_activity_new_acc">Create Account</string>
    <!-- Strings related to login -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="createbtn" translatable="false">Create</string>
    <string name="enable_dark_mode" translatable="false">Enable Dark Mode</string>
    <string name="night_mode">Night Mode</string>
    <string name="serving_value">100g</string>
    <string name="gram">g</string>
    <string name="data_not_found">Product Not Found</string>
    <string name="kcal">kcal</string>
    <string name="serving_size">Serving Size (g)</string>
    <string name="home">Home</string>
    <string name="progress">Progress</string>
    <string name="profil">Profile</string>
    <string name="search">Search</string>
    <string name="kg">kg</string>
    <string name="weight_kg">WEIGHT (KG)</string>
    <string name="save">Save</string>
    <string name="heading">Heading</string>
    <string name="description">Description</string>
    <string name="set_weight">set weight (KG)</string>
    <string name="cancel">Cancel</string>
    <string name="set">Set</string>
    <string name="breakfast">Breakfast</string>
    <string name="dinner">Dinner</string>
    <string name="lunch">Lunch</string>
    <string name="snack">Snack</string>
    <string name="add">Add</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button">Button</string>
    <string name="history">History</string>
    <string name="Next">next</string>
    <string-array name="activity_level">
        <item>No exercise</item>
        <item>Light exercise</item>
        <item>Moderate exercise</item>
        <item>Heavy exercise</item>
        <item>Extreme exercise</item>
    </string-array>

    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="goal">
        <item>Lose weight</item>
        <item>Maintain weight</item>
        <item>Gain weight</item>
    </string-array>

</resources>
