<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/astro"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/facebook_btn"
        android:layout_width="288dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="150dp"
        android:background="@color/blue"
        android:text="@string/continue_with_facebook"
        android:textColor="@color/com_facebook_button_background_color_focused" />

    <Button
        android:id="@+id/email_btn"
        android:layout_width="288dp"
        android:layout_height="wrap_content"
        android:background="@drawable/email_btn_background"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="100dp"
        android:text="@string/SIGN_UP"
        android:textColor="@color/com_facebook_button_background_color_focused"/>

    <TextView
        android:id="@+id/signInText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="80dp"
        android:text="@string/ALREADY_HAVE_AN_ACCOUNT"
        android:textColor="@color/com_facebook_button_background_color_focused" />
</RelativeLayout>