<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_light_background"
    tools:context=".NewAccActivity">

    <EditText
        android:id="@+id/name"
        android:layout_width="267dp"
        android:layout_height="41dp"
        android:layout_marginStart="59dp"
        android:layout_marginTop="216dp"
        android:layout_marginEnd="85dp"
        android:layout_marginBottom="401dp"
        android:autofillHints=""
        android:drawableStart="@drawable/ic_person"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/email"
        android:layout_width="267dp"
        android:layout_height="41dp"
        android:layout_marginStart="59dp"
        android:layout_marginTop="269dp"
        android:layout_marginEnd="85dp"
        android:layout_marginBottom="349dp"
        android:autofillHints=""
        android:background="@drawable/text_background"
        android:drawableStart="@drawable/ic_mail"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/password"
        android:layout_width="267dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="82dp"
        android:layout_marginTop="324dp"
        android:layout_marginEnd="116dp"
        android:autofillHints=""
        android:drawableStart="@drawable/ic_lock"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.425"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/create_btn"
        android:layout_width="232dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="152dp"
        android:layout_marginTop="416dp"
        android:layout_marginEnd="171dp"
        android:background="@drawable/create_btn_background"
        android:text="@string/createbtn"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>